# clawzy.ai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_CODE_DEPLOY.md  DEPLOY.md  DESIGN.md  README.md  THIRD_PARTY_LICENSES  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_skills_tables.py  001_clawhub_templates.py  001_initial.py  002_add_email_verified.py  002_add_skill_reviews.py  002_agent_memory_tools_workspace.py  003_add_agent_gateway_token.py  003_add_password_reset_fields.py  003_skill_hermes_fields.py  004_add_subscription_indexes.py  005_character_templates.py  006_workspace_features.py  007_harness_pipelines.py  008_adaptive_depth.py  009_conversation_evaluations.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: router.py
backend/app/channels/: line.py  telegram.py
backend/app/core/: alerting.py  circuit_breaker.py  config_coordinator.py  database.py  docker_manager.py  email.py  http_client.py  logging_config.py  metrics.py  model_fallback.py  rate_limit.py  redis.py  security.py  ws_relay.py
backend/app/data/: seed_skills.py  skills_seed.py
backend/app/i18n/: __init__.py
backend/app/integrations/: telegram_bot.py
backend/app/middleware/: correlation.py  rate_limit.py
backend/app/models/: __init__.py  agent.py  agent_file.py  agent_task.py  approval.py  channel.py  chat.py  (+13 more)
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_billing.py  test_chat.py  test_credits.py  test_health.py  test_models.py  test_security.py  test_skills.py  test_users.py  test_ws_relay.py
(+391 files in other folders)
